added the botpress chat to root
added the botpress chat to root

--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,8 @@
     <title>React App</title>
   </head>
   <body>
+    <script src="https://cdn.botpress.cloud/webchat/v2/inject.js"></script>
+    <script src="https://mediafiles.botpress.cloud/ca64de85-f6f8-4c02-9bde-a7f2e687335c/webchat/v2/config.js"></script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
